--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
         <a href="https://www.linkedin.com/in/bernardo-pretti/" target="_blank" class="linkedin"><i
             class="bx bxl-linkedin"></i></a>
         <a href="https://www.github.com/prettibernardo" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+        <a href="https://medium.com/@prettibernardo" target="_blank" class="medium"><i class="bx bxl-medium"></i></a>
+
         <a href="mailto:prettibernardo@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
 
       </div>
@@ -81,15 +83,82 @@
         <h2>About</h2>
       </div>
 
-      <div class="row">
-        <div class="col-lg-4 d-flex justify-content-center" data-aos="fade-right">
-          <img src="assets/img/profile.jpeg" class="profile-img img-fluid" alt="">
+      <div class="row ">
+        <div class="col-lg-4 d-flex justify-content-center align-items-center" data-aos="fade-right">
+          <img src="assets/img/profile.jpeg" class="profile-img img-fluid" alt=""
+            style="max-width: 90%; max-height: 90%;">
         </div>
+
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <p>Working with different types of engineering since 2018. Started in mechanical, went through software and
-            stabilized in data over the last years.
-          </p>
-          <strong>HIGHLIGHTS </strong>
+
+          <div class="mb-3">
+            <p class="last-blinking">Working with different types of engineering since 2018. Started in <b
+                style="color:#d6c98d">mechanical</b>, went through
+              <b style="color:#aed191">software</b> and
+              stabilized in <b style="color:#90d4aa">data engineering</b> over the last years.
+              <hr>
+            </p>
+            <div class="skills">
+              <div class="skill-item">
+                <div class="icons">
+                  <img src="https://www.vectorlogo.zone/logos/python/python-icon.svg" alt="Python" height="24">
+                  <img src="https://www.svgviewer.dev/static-svgs/476508/sql.svg" alt="SQL" height="24">
+                </div>
+                <div class="description">
+                  - Python/SQL Expert
+                </div>
+              </div>
+
+              <div class="skill-item">
+                <div class="icons">
+                  <img src="https://www.vectorlogo.zone/logos/apache_spark/apache_spark-icon.svg" alt="Apache Spark"
+                    height="24">
+                  <img
+                    src="https://upload.vectorlogo.zone/logos/apache_airflow/images/9c14446f-4cdc-4b19-9290-c753fc20fb2a.svg"
+                    alt="Apache Airflow" height="24">
+                </div>
+                <div class="description">
+                  - Big Data and Orchestrator
+                </div>
+              </div>
+
+              <div class="skill-item">
+                <div class="icons">
+                  <img src="https://www.vectorlogo.zone/logos/docker/docker-icon.svg" alt="Docker" height="24">
+                  <img src="https://www.vectorlogo.zone/logos/kubernetes/kubernetes-icon.svg" alt="Kubernetes"
+                    height="24">
+                </div>
+                <div class="description">
+                  - Data Architect
+                </div>
+              </div>
+
+              <div class="skill-item">
+                <div class="icons">
+                  <img src="https://www.vectorlogo.zone/logos/amazon_aws/amazon_aws-icon.svg" alt="AWS" height="24">
+                  <img src="https://svgmix.com/uploads/3111e8-aws-s3.svg" alt="AWS S3" height="24">
+                </div>
+                <div class="description">
+                  - AWS Pro.
+                </div>
+              </div>
+
+              <div class="skill-item">
+                <div class="icons">
+                  <img src="https://raw.githubusercontent.com/gilbarbara/logos/main/logos/dbt-icon.svg" alt="dbt"
+                    height="24">
+                  <img
+                    src="https://upload.vectorlogo.zone/logos/airbyteio/images/0b7835a0-eb34-4378-805b-1ea958cecccf.svg"
+                    alt="Airbyte" height="24">
+                </div>
+                <div class="description">
+                  - Open Source Enthusiast
+                </div>
+              </div>
+            </div>
+
+          </div>
+
           <div class="row" style="color:#E5DBB1">
             <div class="col-lg-6">
               <ul>
@@ -186,26 +255,20 @@
   </section>
   <!-- End About Section -->
   <!-- Start Project Section -->
+
   <section id="portfolio" class="portfolio">
+
     <div class="container">
 
       <div class="section-title">
-        <h2>Projects</h2>
-      </div>
+        <p>WEB DEV. PROJECTS</p>
 
-      <!-- <div class="row">
-        <div class="col-lg-12 d-flex justify-content-center">
-          <ul id="portfolio-flters">
-            <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">Web-App</li>
-            <li data-filter=".filter-project">Project</li>
-          </ul>
-        </div>
-      </div> -->
+      </div>
 
       <div class="row portfolio-container">
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+
           <center>
             <h5>Fast PID (Engineering App) <a href="https://professionalpid.onrender.com"><i class="bx bx-link"></a></i>
             </h5>
@@ -296,8 +359,8 @@
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100"
-            style="background:#e5dbb1">
-            <h4 style="text-align:left;color:#5E5535">Languages</h4>
+            style="background:#b4ce84">
+            <h4 style="text-align:left;color:#4c5a32">Languages</h4>
             <p style="text-align:center;">
             <div></div>
             <img src="https://www.vectorlogo.zone/logos/python/python-horizontal.svg" alt="vectorlogo.zone" height="50">
@@ -312,8 +375,8 @@
             </p>
           </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100"
-            style="background:#e5dbb1">
-            <h4 style="text-align:left;color:#5E5535">Data Tools</h4>
+            style="background:#84ce9c">
+            <h4 style="text-align:left;color:#244d31">Data Tools</h4>
             <p style="text-align:center;">
               <img src="https://www.vectorlogo.zone/logos/apache_spark/apache_spark-ar21.svg" alt="vectorlogo.zone"
                 height="50">
@@ -324,13 +387,14 @@
                 height="60">
               <img src="https://www.vectorlogo.zone/logos/apache_kafka/apache_kafka-ar21.svg" alt="vectorlogo.zone"
                 height="50">
+              <img src="https://upload.vectorlogo.zone/logos/getdbt/images/bfd2e20c-3067-4898-861d-7e2913beb27f.svg"
+                height="35" alt="vectorlogo.zone">
               <img
                 src="https://raw.githubusercontent.com/cncf/landscape/570b758bae48d0a0cbd21651bb5cad63059f248e/hosted_logos/trino.svg"
                 alt="vectorlogo.zone" height="50">
               <img src="https://www.vectorlogo.zone/logos/apache_hadoop/apache_hadoop-ar21.svg" alt="vectorlogo.zone"
-                height="50">
-              <img src="https://upload.vectorlogo.zone/logos/getdbt/images/bfd2e20c-3067-4898-861d-7e2913beb27f.svg"
-                height="35" alt="vectorlogo.zone">
+                height="60">
+
               <img src="https://www.vectorlogo.zone/logos/minioio/minioio-ar21.svg" alt="vectorlogo.zone" height="50">
               <img
                 src="https://upload.vectorlogo.zone/logos/pydata_pandas/images/3379b038-0796-45fe-8467-3fba66c10b70.svg"
@@ -340,13 +404,17 @@
               <img src="https://www.vectorlogo.zone/logos/debeziumio/debeziumio-ar21.svg" alt="vectorlogo.zone">
               <img src="https://upload.vectorlogo.zone/logos/airbyteio/images/0b7e92bd-0471-4017-8820-a0a943de92f4.svg"
                 alt="vectorlogo.zone" height="25">
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/DuckDB_logo.svg/512px-DuckDB_logo.svg.png?20231218224046"
+                alt="vectorlogo.zone" height="25">
+
             </p>
             <small style="color: black;">Others: Delta Lake, Dagster, Mage.io, ElasticSearch, Superset, ClickHouse,
               Druid, Amundsen...</small>
           </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100"
-            style="background:#e5dbb1">
-            <h4 style="text-align:left;color:#5E5535">Databases & Warehouses</h4>
+            style="background:#84ce9c">
+            <h4 style="text-align:left;color:#244d31">Databases & Warehouses</h4>
             <p style="text-align:center;">
               <img src="https://www.vectorlogo.zone/logos/mysql/mysql-horizontal.svg" alt="vectorlogo.zone" height="70"
                 width="130">
@@ -360,8 +428,8 @@
           </div>
 
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100"
-            style="background:#e5dbb1">
-            <h4 style="text-align:left;color:#5E5535">Cloud</h4>
+            style="background:#84ceb8">
+            <h4 style="text-align:left;color:#2b4d42">Cloud</h4>
             <p style="text-align:center;">
               <img src="https://www.vectorlogo.zone/logos/amazon_aws/amazon_aws-ar21.svg" alt="vectorlogo.zone">
               <img src="https://www.vectorlogo.zone/logos/google_cloud/google_cloud-ar21.svg" alt="vectorlogo.zone">
@@ -370,8 +438,8 @@
             </p>
           </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100"
-            style="background:#e5dbb1">
-            <h4 style="text-align:left;color:#5E5535">Frameworks</h4>
+            style="background:#84b7ce">
+            <h4 style="text-align:left;color:#2b3e47">Frameworks</h4>
             <p style="text-align:center;">
               <img src="https://www.vectorlogo.zone/logos/palletsprojects_flask/palletsprojects_flask-ar21~v2.svg"
                 alt="Flask vectorlogo.zone">
@@ -387,8 +455,8 @@
             </p>
           </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100"
-            style="background:#e5dbb1">
-            <h4 style="text-align:left;color:#5E5535">Tools</h4>
+            style="background:#8495ce">
+            <h4 style="text-align:left;color:#384368">Tools</h4>
             <p style="text-align:center;">
               <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-ar21.svg" alt="vectorlogo.zone">
               <img src="https://www.vectorlogo.zone/logos/docker/docker-ar21.svg" alt="vectorlogo.zone">
